# cqlite-perf

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  goals.toml  rust-toolchain.toml
configs/: codec-sweep.toml  read-headline.toml  read-suite.toml  regression.toml
datasets/manifests/: read-basic-S-deflate.json  read-basic-S-lz4.json  read-basic-S-none.json  read-basic-S-snappy.json  read-basic-S-zstd.json  read-collections-S-lz4.json  read-wide_rows-S-lz4.json
docs/: feedback-to-cqlite-team.md  prd-addendum.md
examples/: probe_cols.rs  probe_nonpk.rs  probe_point.rs  probe_slice.rs
reports/2026-05-30-0.1.0/: SUMMARY.md  results.jsonl
reports/2026-05-31-0.1.0/: SCORECARD.md  SUMMARY.md  results.jsonl
reports/2026-06-02-0.1.0/: SCORECARD.md  SUMMARY.md  results.jsonl
schemas/: basic.cql  collections.cql  timeseries.cql  wide_rows.cql
scripts/: gen-corpus.sh
src/: config.rs  distribution.rs  main.rs  metrics.rs  report.rs  runner.rs  scorecard.rs
src/datasets/: mod.rs
src/workloads/: mixed.rs  mod.rs  read.rs  write.rs
