[package]
name = "cqlite-perf"
version = "0.1.0"
edition = "2021"
publish = false
description = "External macro-benchmark harness for CQLite (read/write/mixed suites)"

[dependencies]
# Standalone git-tag dependency on cqlite — no local paths, fully reproducible.
# `write-support` is non-default and required by the write suite; the defaults
# (all-compression, state_machine) cover the read path.
cqlite-core = { git = "https://github.com/pmcfadin/cqlite.git", tag = "v0.9.2", features = ["write-support"] }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
hdrhistogram = "7"               # latency percentiles, coordinated-omission aware
rand = "0.8"
rand_distr = "0.4"               # Zipfian distribution
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
sysinfo = "0.30"                 # RSS / CPU sampling
sha2 = "0.10"                    # dataset checksums
tempfile = "3"                   # scratch dirs for write/volume runs

[dev-dependencies]
criterion = "0.5"                # optional shared bench helpers

[profile.release]
debug = true                     # keep symbols for flamegraphs (Phase 3)
lto = "thin"
codegen-units = 1
